services/app/filestash/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filestash
  annotations:
    external-dns.alpha.kubernetes.io/hostname: files.d-reis.com
    external-dns.alpha.kubernetes.io/target: thule.d-reis.com
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth@kubernetescrd
    traefik.ingress.kubernetes.io/router.priority: "10"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - files.d-reis.com
      secretName: filestash-tls
  rules:
    - host: files.d-reis.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: filestash
                port:
                  number: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-outpost
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`files.d-reis.com`) && PathPrefix(`/outpost.goauthentik.io`)
      kind: Rule
      priority: 100
      services:
        - name: authentik-server
          namespace: authentik
          port: 80
  tls:
    secretName: filestash-tls
